welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:30: error: not found: value i
  setCouleurBrosse(t(i));
                     ^